<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <!-- Define variables for your ViewModel or data sources -->
        <variable
            name="contact"
            type="com.tutorial.myportfolio.viewmodel.ContactViewModel" />
    </data>
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:padding="20dp"
        tools:context=".view.ContactFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/link_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back_button_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_700"
                android:includeFontPadding="false"
                android:text="@string/string_contact"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/link_back"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_about">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_500"
                    android:text="@string/name_input_label"
                    android:textColor="@color/textColor" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomInputAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="What is your name?"
                        android:inputType="text"
                        android:text="@={contact.name}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_500"
                    android:text="@string/email_input_label"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="10dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomInputAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="What is your email?"
                        android:inputType="textEmailAddress"
                        android:text="@={contact.email}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/message_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_500"
                    android:text="@string/message_input_label"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="10dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomInputAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="top|start"
                        android:hint="Write your message..."
                        android:inputType="textMultiLine"
                        android:minLines="4"
                        android:text="@={contact.message}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <android.widget.Button
                    android:id="@+id/btn_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MainButtonStyle"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:text="@string/send_button_text" />


            </LinearLayout>
            <!--        <LinearLayout-->
            <!--            android:id="@+id/input_email"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="20dp"-->
            <!--            android:orientation="vertical"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="1.0"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/input_name">-->

            <!--        </LinearLayout>-->
            <!--        <LinearLayout-->
            <!--            android:id="@+id/input_message"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="20dp"-->
            <!--            android:orientation="vertical"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="1.0"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/input_email">-->


            <!--        </LinearLayout>-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
